--- a/debian/changelog
+++ b/debian/changelog
@@ -1,12 +1,6 @@
-libdist-zilla-plugin-release-duploaddist (0.002) precise; urgency=low
-
-  * Add changelog.
-
- -- Dmitry Lukiyanchuk <wtertius@gmail.com>  Thu, 16 Apr 2015 12:21:57 +0300
-
 libdist-zilla-plugin-release-duploaddist (0.001) precise; urgency=low
 
   * Initial commit.
 
- -- Dmitry Lukiyanchuk <wtertius@gmail.com>  Thu, 16 Apr 2015 12:16:48 +0300
+ -- Dmitry Lukiyanchuk <tertius@yandex-team.ru>  Thu, 16 Apr 2015 13:56:09 +0300
 
